Added p2p like network topology config
-Added new small config with p2p like network topology with 20 miners

--- a/config/experiment1_0.cfg
+++ b/config/experiment1_0.cfg
@@ -1,4 +1,4 @@
-description=Experiment 1 - 9 honest miners, 1 malicious
+description=Experiment 1. - 9 honest miners, 1 malicious
 
 miner=0.1 malicious
 miner=0.1 honest
